--- a/src/DemaConsulting.Sbom.TransitiveSpdx/DemaConsulting.Sbom.TransitiveSpdx.csproj
+++ b/src/DemaConsulting.Sbom.TransitiveSpdx/DemaConsulting.Sbom.TransitiveSpdx.csproj
@@ -15,12 +15,12 @@
     <PackageTags>SPDX SBOM</PackageTags>
     <PackAsTool>True</PackAsTool>
     <ToolCommandName>transitive-spdx</ToolCommandName>
-    <AssemblyVersion>0.1.0.0</AssemblyVersion>
-    <FileVersion>0.1.0.0</FileVersion>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <EnforceCodeStyleInBuild>True</EnforceCodeStyleInBuild>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
-    <Version>0.1.0</Version>
+    <Version>0.0.0</Version>
+    <AssemblyVersion>0.0.0.0</AssemblyVersion>
+    <IncludeSourceRevisionInInformationalVersion>false</IncludeSourceRevisionInInformationalVersion>
   </PropertyGroup>
 
   <ItemGroup>
